--- a/index.html
+++ b/index.html
@@ -17,22 +17,27 @@
         <div class="contact-info">
           <h3 class="title">Let's get in touch</h3>
           <p class="text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
-            dolorum adipisci recusandae praesentium dicta!
+            We'd love to hear from you! Whether you have questions about our 
+            services, need support, or want to discuss a potential project, 
+            our team is here to help.
+
           </p>
 
           <div class="info">
             <div class="information">
               <img src="Image3.png" class="icon" alt="" />
-              <p>92 Cherry Drive Uniondale, NY 11553</p>
+              <p>123 Innovation Drive, Suite 456, City, Country
+              </p>
             </div>
             <div class="information">
               <img src="Image2.png" class="icon" alt="" />
-              <p>lorem@ipsum.com</p>
+              <p>info@qurtleinnovations.com
+              </p>
             </div>
             <div class="information">
               <img src="Image1.png" class="icon" alt="" />
-              <p>123-456-789</p>
+              <p>+1 (123) 456-7890
+              </p>
             </div>
           </div>
 
